name:                rayne-server
version:             0.1.0.0
synopsis:            server for my blog, project name: rayne
description:         Please see README.md
homepage:            
license:             MIT
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api.Types
                     , Auth
                     , Auth.Types
                     , Database.Adaptor
                     , Database.Class
                     , Database.Schema
                     , Database.Schema.Types
                     , Database.Query
                     , Database.Common
                     , Game.Api
                     , Game.Api.Types
                     , Game.Handler
                     , Game.Types
                     , Handler
                     , HttpApp.Api
                     , HttpApp.Handler
                     , HttpApp.BotKey.Api
                     , HttpApp.BotKey.Api.Types
                     , HttpApp.BotKey.Handler
                     , HttpApp.BotKey.Types
                     , HttpApp.BotKey.Model
                     , HttpApp.User.Api
                     , HttpApp.User.Api.Types
                     , HttpApp.User.Handler
                     , HttpApp.User.Types
                     , HttpApp.User.Model
                     , Util.Base64
                     , Types
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , diener
                     , email-validate
                     , entropy
                     , http-api-data
                     , http-types
                     , lens
                     , lifted-base
                     , monad-control
                     , mtl
                     , opaleye
                     , parsec
                     , postgresql-simple
                     , product-profunctors
                     , pwstore-fast
                     , servant
                     , servant-server
                     , servant-purescript
                     , text
                     , text-show
                     , time
                     , transformers
                     , transformers-base
                     , wai
  default-language:    Haskell2010
  ghc-options:         -Wall

executable rayne-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , data-default
                     , diener
                     , mtl
                     , optparse-applicative
                     , postgresql-simple
                     , servant-server
                     , rayne-server
                     , text
                     , text-show
                     , warp
  default-language:    Haskell2010

executable psclient-generator
  main-is:             Main.hs
  hs-source-dirs:      psclient-generator
  default-language:    Haskell2010
  build-depends:       rayne-server
                     , base
                     , aeson
                     , containers
                     , http-api-data
                     , http-types
                     , lens
                     , purescript-bridge
                     , servant
                     , servant-purescript
                     , servant-subscriber
                     , text

source-repository head
  type:     git
  location: https://github.com/rubenmoor/
